--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
     <meta charset="UTF-8">
 
 {% seo %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" type="image/ico" href="https://user-images.githubusercontent.com/25025173/48310192-acc4ef80-e5bc-11e8-85df-c209ed27bde7.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
@@ -38,6 +39,7 @@
       {{ content }} 
       <footer class="site-footer">
         <span class="site-footer-owner">Email : fahrudinhasby12@gmail.com</span>
+        <a href="#" class="fa fa-facebook"></a>
         <span class="site-footer-owner">Facebook :<a href="https://www.facebook.com/hasby.fahrudin"> Facebook</a></span>
       </footer>
     </main>
