--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,8 @@
       <footer class="site-footer">
         <span class="site-footer-owner">Email : fahrudinhasby12@gmail.com</span>
         <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-instagram"></a>
         <span class="site-footer-owner">Facebook :<a href="https://www.facebook.com/hasby.fahrudin"> Facebook</a></span>
       </footer>
     </main>
